--- a/code/python/simple.ipynb
+++ b/code/python/simple.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkbOIMaaZoXl6KToWmpSUi",
+      "authorship_tag": "ABX9TyPs5ZFv+bG0+MTiQqYIQfrI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,8 +76,6 @@
         }
       ],
       "source": [
-        "# python remake of http://opendata.cern.ch/record/50 from C. Sander & A. Schmidt\n",
-        "\n",
         "# set this to True if you use Google Colab\n",
         "runOnGoogle = True\n",
         "if runOnGoogle: \n",
@@ -94,18 +92,18 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import files # comment this line if you are running this in your computer\n",
         "import uproot # reading ROOT filies\n",
         "import mplhep as hep # matplotlib for hep\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import awkward as ak \n",
-        "import pandas as pd\n",
-        "from google.colab import files # comment this line if you are running this in your computer"
+        "import pandas as pd"
       ],
       "metadata": {
         "id": "8ILXAYqwzTDY"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -117,7 +115,7 @@
       "metadata": {
         "id": "VBs0HkZAyJcD"
       },
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -129,46 +127,59 @@
       "metadata": {
         "id": "9AeEJjgbzZvE"
       },
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df"
+        "# print the first 25 raws of the dataframe\n",
+        "df.head(25)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 411
+          "height": 809
         },
         "id": "78vBiMR2zfki",
-        "outputId": "558baf44-e355-42d7-86de-499e7d62184e"
+        "outputId": "5d6a98af-4368-47bc-e208-6fded432ec31"
       },
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "        NJet  NMuon\n",
-              "0          0      1\n",
-              "1          0      1\n",
-              "2          0      0\n",
-              "3          1      0\n",
-              "4          0      1\n",
-              "...      ...    ...\n",
-              "469379     0      1\n",
-              "469380     0      0\n",
-              "469381     0      0\n",
-              "469382     0      1\n",
-              "469383     0      1\n",
-              "\n",
-              "[469384 rows x 2 columns]"
+              "    NJet  NMuon\n",
+              "0      0      1\n",
+              "1      0      1\n",
+              "2      0      0\n",
+              "3      1      0\n",
+              "4      0      1\n",
+              "5      0      1\n",
+              "6      0      1\n",
+              "7      0      1\n",
+              "8      0      0\n",
+              "9      0      0\n",
+              "10     0      1\n",
+              "11     0      0\n",
+              "12     3      0\n",
+              "13     0      0\n",
+              "14     0      1\n",
+              "15     2      1\n",
+              "16     0      1\n",
+              "17     0      1\n",
+              "18     1      0\n",
+              "19     0      1\n",
+              "20     1      1\n",
+              "21     0      0\n",
+              "22     0      0\n",
+              "23     0      1\n",
+              "24     3      0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f7b705a8-980c-493e-8b95-53335d4c7331\">\n",
+              "  <div id=\"df-282966c7-3a02-4e66-b713-b6ab3afb1e04\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -219,40 +230,109 @@
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>469379</th>\n",
+              "      <th>5</th>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>469380</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>469381</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>469382</th>\n",
+              "      <th>6</th>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>469383</th>\n",
+              "      <th>7</th>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>469384 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f7b705a8-980c-493e-8b95-53335d4c7331')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-282966c7-3a02-4e66-b713-b6ab3afb1e04')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -303,12 +383,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f7b705a8-980c-493e-8b95-53335d4c7331 button.colab-df-convert');\n",
+              "          document.querySelector('#df-282966c7-3a02-4e66-b713-b6ab3afb1e04 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f7b705a8-980c-493e-8b95-53335d4c7331');\n",
+              "          const element = document.querySelector('#df-282966c7-3a02-4e66-b713-b6ab3afb1e04');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -331,7 +411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 30
         }
       ]
     },
